# kc14

./: .gitignore  README.md  pyproject.toml
.config/: install.sh
.devcontainer/: Dockerfile  devcontainer.json
config/: .zshrc  install.sh
data/: github_ff.graphql  github_ff.json  github_ff_HikaruEgashira.graphql  github_sponsoring.graphql  github_sponsoring.json  github_sponsors.graphql  github_sponsors.json  github_star.graphql  graph.gexf
kc14/: analyze.py  export.py  ff.py  get_user.py  import.py  main.py  sponsoring.py  sponsors.py  star.py  test_prime.py
tests/: test_version.py
