[tool.poetry]
name = "kc14"
version = "0.1.0"
description = ""
authors = ["Hikaru Egashira <shighten@gmail.com>"]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
networkx = "^2.6.3"
matplotlib = "^3.5.1"
pandas = "^1.3.5"
pytest = "^7.0.0rc1"
ipykernel = "^6.6.1"
scipy = "^1.10.0"
python-louvain = {git = "https://github.com/taynaud/python-louvain.git", rev = "networkx2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
